--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/blur": "^4.4.0",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.10.1",
+    "@reduxjs/toolkit": "^2.2.6",
     "expo": "~51.0.21",
     "expo-file-system": "~17.0.1",
     "expo-image-picker": "~15.0.7",
@@ -19,10 +21,15 @@
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.32.0"
+    "react-native-screens": "^3.32.0",
+    "react-redux": "^9.1.2",
+    "react-native-web": "~0.19.10",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@redux-devtools/core": "^4.0.0"
   },
   "private": true
 }
